# mcp-test

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  server.py
